# news-scraper-open

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
news_crawler/: __init__.py  cli.py
news_crawler/core/: config.py  orchestrator.py  state.py
news_crawler/db/: mongo_client.py
news_crawler/processors/: _hf_common.py  classifier.py  gemini_nlp.py  sentiment_analyzer.py  summarizer.py  topic_classifier.py
news_crawler/providers/: _entity_common.py  _genai_quota.py  genai_provider.py  ollama_provider.py  webhook_provider.py
news_crawler/repositories/: articles_repository.py  link_pool_repository.py  metadata_repository.py  pipeline_logs_repository.py
news_crawler/scrapers/: __init__.py  aljazeera_scraper.py  base_scraper.py  bbc_scraper.py  cnn_scraper.py  dw_scraper.py  france24_scraper.py  guardian_scraper.py  guardian_selenium_scraper.py  newsapi_scraper.py  npr_scraper.py  reuters_scraper.py  reuters_selenium_scraper.py  streams.py  wsj_scraper.py
news_crawler/utils/: logging.py  text.py  validators.py
scripts/: bootstrap_indexes.py  bootstrap_models.py  dedupe_articles_by_url.py
scripts/systemd/: news-crawler-ai.service  news-crawler-ai.timer  news-scraper-open.service  news-scraper-open.timer
tests/: conftest.py  test_classifier_fallbacks.py  test_cli.py  test_gemini_client_resilience.py  test_gemini_nlp_parsing.py  test_llm_fallbacks.py  test_nlp_backend_switching.py  test_ollama_entity_extraction.py  test_orchestrator.py  test_repositories.py  test_reuters_selenium_extraction.py  test_selenium_resolution.py  test_state_manager.py  test_stream_helpers.py  test_summarizer_chunking.py  test_title_cleaning.py  test_webhook_provider.py
